# pypana

./: .gitignore  .readthedocs.yaml  CPC_analysis.py  Conc.py  Conc_Data_csv_convert.py  DEKATI_ELPI+_fileread.py  DEKATI_ELPIplus_fileread.py  Def.py  Dist.py  Dist_2.py  Dist_Data_csv_convert.py  Eval_Example.ipynb  Impactor_Design.py  Merge_arrays.py  PALASCPC_fileread.py  PALAS_SMPS2100_csv_convert.py  PALAS_SMPS2100_fileread.py  PALAS_UFCPC_fileread.py  PALAS_USMPS_csv_convert.py  PALAS_USMPS_fileread.py  PALAS_WELAS_fileread.py  ParticleElectricalMobility.py  ParticleMechanics.py  ParticleSampler.py  Particle_analysis.py  Particle_growth.py  Physical_constants.py  README.md  SMPS_analysis.py  SMPS_filewrite.py  Save_in_dill.py  Save_to_JSON.py  Save_values.py  Sup.py  TEM_histogram.py  TSICPC_fileread.py  TSI_APS3310_fileread.py  TSI_APS3321_fileread.py  TSI_CPC3775_fileread.py  TSI_EM3068_fileread.py  (+24 more)
.github/workflows/: ci.yml  release.yml
ExampleFiles/: 20211111_TSI_SMPS3071.txt  20230704_PALAS_USMPS.txt  20240529_TSISMPS3938.TXT  20240625_PALAS_USMPS.txt  20240701_PALAS-UFCPC_13047.txt  20250822_PALAS_WELAS.txt  20250822_Promo_distributions.csv  20250932_TSI_APS3321.txt  DataFile_Columns.xlsx
JupyterNotebooks/: Jupyter_Example.ipynb  jupyter_example.ipynb  plot_themes.ipynb
docs/source/: conf.py  index.rst
docs/source/tutorials/: architecture.rst  collection_efficiency.rst  data_manipulation.rst  histogram.rst  themes.rst
src/pypana/: __init__.py  config.py  exceptions.py  pana_error.py
src/pypana/analysis/: __init__.py  fits.py  types.py
src/pypana/data/: bin_axis.py  collection_efficiency.py  instrument_data.py  measurement.py  size_distribution.py  time_series.py  utils.py
src/pypana/data/defs/: __init__.py  arrays.py  data_type.py  data_type_str.py  normalization.py  quantity.py
src/pypana/data/exceptions/: invalid_index_error.py
src/pypana/exceptions/: __init__.py  incompatible_argument_error.py
src/pypana/plots/: utils.py
src/pypana/plots/histograms/: hist_matrix.py  hist_single.py  hist_single_interactive.py
src/pypana/plots/scatter/: __init__.py  collection_efficiency.py
src/pypana/plots/themes/: __init__.py  base.py  ibm.py  tol7.py  utils.py
src/pypana/readers/: __init__.py  base.py  base_instrument_reader.py  base_reader.py  discovery.py  reader_redirector.py
src/pypana/readers/exceptions/: read_error.py  too_many_options.py
src/pypana/readers/palas/: palas_usmps.py  palas_welas.py  utils.py
src/pypana/readers/tsi/: tsi_aps3321.py  tsi_cpc3775.py  tsi_las3340a.py  tsi_smps3071.py
src/pypana/utils/: debug.py  measurement_data_type.py
tests/analysis/: test_fits.py
tests/data/: strategies.py  test_collection_efficiency.py  test_instrument_data.py  test_measurement.py
tests/readers/: defs.py  test_base.py  test_discovery.py  test_readers_can_read.py
tests/readers/palas/: test_palas_usmps.py
tests/readers/tsi/: test_tsi_aps3321.py  test_tsi_cpc3775.py
