[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pypana"
dynamic = ["version"]
description = "Package for import and evaluation of aerosol measurements"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Maximilian Böhmichen", email = "m.boehmichen@tum.de" },
    { name = "Kevin Maier", email = "kevin.r.maier@tum.de" },
    { name = "Nico Chrisam", email = "nico.chrisam@tum.de" }
]
license = { file = "LICENSE" }
keywords = ["aerosol", "aerosols", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2.2",
    "openpyxl>=3.1",
    "pandas>=3.0.0",
    "plotly>=5.24",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "rich>=14.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "statsmodels>=0.14",
    "tqdm>=4.66",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pypana"]

[project.urls]
Homepage = "https://github.com/Haisch-Group/pypana"
Repository = "https://github.com/Haisch-Group/pypana"
Issues = "https://github.com/Haisch-Group/pypana/issues"

[tool.ruff]
target-version = "py312"
exclude = ["_v1"]

[tool.ruff.lint]
ignore = [
    "E501",
    "ANN003",
    "PLR0913",
    "D104",
    "D105"
]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "SIM",
    "ANN",
    "PLR",
    "PLE",
    "PLW",
    "PLC",
    "UP",
    "N",
    "PTH",
    "PD",
    "D",
    "C4",
    "FA",
    "ISC",
    "PIE810",
]

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "simdkalman.*",
    "unidip.*",
    "dill.*",
    "statsmodels.*",
    "scipy.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/pypana"]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
show_contexts = true


[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "jupyterlab>=4.5.6",
    "pre-commit>=4.5.1",
    "py2puml>=0.11.0",
    "pylint>=4.0.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "scipy-stubs>=1.16.0",
        "pandas-stubs>=3.0.0",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "pydata-sphinx-theme>=0.17.0",
    "sphinx<9",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-svg2pdfconverter[cairosvg]>=2.1.0",
]

[project.optional-dependencies]
jupyter = [
    "ipykernel",
    "ipywidgets",
    "ipympl",
    "nbformat"
]